# CSE180-Robotics-Final

./: .gitignore  README.md  calcs.xlsx  map.txt  notes.txt  post_calcs.xlsx  scan.txt  scan_intensities.txt  scan_notes.txt  scan_post_profile_notes.txt  scane_closer.txt
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/gazebo_msgs/: ApplyBodyWrenchRequest.h  ApplyBodyWrenchResponse.h  ApplyJointEffortRequest.h  ApplyJointEffortResponse.h  BodyRequestRequest.h  BodyRequestResponse.h  ContactState.h  ContactsState.h  DeleteModelRequest.h  DeleteModelResponse.h  GetJointPropertiesRequest.h  GetJointPropertiesResponse.h  GetLinkPropertiesRequest.h  GetLinkPropertiesResponse.h  GetLinkStateRequest.h  GetLinkStateResponse.h  GetModelPropertiesRequest.h  GetModelPropertiesResponse.h  GetModelStateRequest.h  GetModelStateResponse.h  GetPhysicsPropertiesRequest.h  GetPhysicsPropertiesResponse.h  GetWorldPropertiesRequest.h  GetWorldPropertiesResponse.h  JointRequestRequest.h  JointRequestResponse.h  LinkState.h  LinkStates.h  ModelState.h  ModelStates.h  ODEJointProperties.h  ODEPhysics.h  SetJointPropertiesRequest.h  SetJointPropertiesResponse.h  SetJointTrajectoryRequest.h  SetJointTrajectoryResponse.h  SetLinkPropertiesRequest.h  SetLinkPropertiesResponse.h  SetLinkStateRequest.h  SetLinkStateResponse.h  (+9 more)
devel/include/gazebo_plugins/: CameraSynchronizerConfig.h
devel/include/husky_msgs/: HuskyStatus.h
devel/lib/gazebo_plugins/: camera_synchronizer  hokuyo_node  pub_joint_trajectory_test
devel/lib/pkgconfig/: cse180final.pc  gazebo_msgs.pc  gazebo_plugins.pc  gazebo_ros.pc  husky_control.pc  husky_description.pc  husky_gazebo.pc  husky_msgs.pc  husky_navigation.pc  husky_ur5_moveit_config.pc  husky_viz.pc  simple.pc  teleop_twist_keyboard.pc
devel/lib/python2.7/dist-packages/gazebo_plugins/: __init__.py
devel/lib/python2.7/dist-packages/gazebo_plugins/cfg/: CameraSynchronizerConfig.py
devel/lib/python2.7/dist-packages/gazebo_ros/: __init__.py
devel/lib/simple/: chatter  drawsquare  eigens  followplan  getplan  move_around  moveongrid  navigatepoints  printcolor
devel/share/common-lisp/ros/gazebo_msgs/msg/: _package.lisp  gazebo_msgs-msg.asd
devel/share/common-lisp/ros/gazebo_msgs/srv/: _package.lisp  gazebo_msgs-srv.asd
devel/share/cse180final/cmake/: cse180finalConfig.cmake
devel/share/gazebo_msgs/cmake/: gazebo_msgs-msg-paths.cmake  gazebo_msgsConfig.cmake
devel/share/gazebo_plugins/cmake/: gazebo_pluginsConfig.cmake
devel/share/gazebo_ros/cmake/: gazebo_rosConfig.cmake
devel/share/husky_control/cmake/: husky_controlConfig.cmake
devel/share/husky_description/cmake/: husky_descriptionConfig.cmake
devel/share/husky_gazebo/cmake/: husky_gazeboConfig.cmake
devel/share/husky_msgs/cmake/: husky_msgs-msg-paths.cmake  husky_msgsConfig.cmake
devel/share/husky_navigation/cmake/: husky_navigationConfig.cmake
devel/share/husky_ur5_moveit_config/cmake/: husky_ur5_moveit_configConfig.cmake
devel/share/husky_viz/cmake/: husky_vizConfig.cmake
devel/share/simple/cmake/: simpleConfig.cmake
devel/share/teleop_twist_keyboard/cmake/: teleop_twist_keyboardConfig.cmake
src/: husky_packages.tgz
src/cse180final/: CMakeLists.txt  NOTES.txt  detectpost.cpp  make_plan.cpp  mobility.cpp  navigatepoints.cpp  package.xml  pointcloud.cpp  randomnav.cpp  scan_cloud.cpp  topic_list.txt
src/cse180final/launch/: husky_posts.launch  robocop.launch
src/husky_packages/husky_gazebo/worlds/: justposts.world
src/simple/: CMakeLists.txt  TEMPLATE.cpp  chatter.cpp  drawsquare.cpp  eigens.cpp  followplan.cpp  getplan.cpp  lab1.launch  lab3a.launch  lab3b.launch  lab4.launch  move_around.cpp  moveongrid.cpp  navigatepoints.cpp  package.xml  printcolor.cpp
